--- a/src/app/templates/blog/test.html
+++ b/src/app/templates/blog/test.html
@@ -55,17 +55,22 @@
     <br>
     <div class="container">
         <div class="row">
-          <div class="col-sm-4">
-            <h2>col-sm-4</h2>
+          <div class="col-sm-2">
+            <h2>col-sm-2</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit placeat ratione explicabo nemo officia, expedita, totam aspernatur, incidunt vero corporis modi rem minima repellat nobis officiis. Libero excepturi culpa perspiciatis et velit doloribus molestias animi in officia dicta deserunt aperiam eum quasi quia, laudantium asperiores aut, ex quidem vitae corrupti eos maxime. Minima error tempore fugit necessitatibus asperiores aliquam nihil veniam a dicta odio blanditiis dolorem iste exercitationem doloremque voluptate repellendus modi ea, distinctio, itaque molestias sapiente sed qui repellat voluptatem.</p>
           </div>
-          <div class="col-sm-8">
+          <div class="col-sm-6">
             <h2>col-sm-8</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti vero harum fuga error dolorum quam ipsam debitis dicta maxime eum adipisci, illo minus in esse saepe non ratione ipsum nemo magnam inventore nihil. Velit deleniti natus maiores blanditiis. Fugiat placeat minus, possimus beatae impedit in quos tempore aspernatur omnis obcaecati cum iusto error, eius sit, enim quam dolorum fuga? Facilis, quod. Voluptatum, tenetur, veritatis, sint obcaecati quisquam ullam fuga odio aspernatur amet reiciendis dicta nemo pariatur. Mollitia, accusamus nulla laudantium necessitatibus, quibusdam ducimus est eaque qui omnis, quae odit eveniet quos vel fugiat id architecto maxime ea at alias sint voluptatibus saepe delectus? Soluta consectetur praesentium, corporis adipisci fugit unde laudantium culpa omnis! Fugit, maxime nam unde voluptate eaque tenetur delectus excepturi esse voluptatem totam magni quas nobis ut ea sed veritatis possimus dolores, earum neque vitae iusto? Provident repellendus iure eius aut! Ducimus nesciunt, temporibus assumenda voluptate, fugiat est alias, laborum numquam quaerat ratione reiciendis laudantium? Expedita facilis vero sequi nihil sit nostrum fugiat amet eos, laborum minima non maxime, veritatis alias necessitatibus cumque recusandae libero saepe in. Dignissimos provident veniam harum quae esse distinctio nesciunt et aliquam eveniet ullam officiis eaque voluptas laboriosam, commodi a rerum ea saepe! Laborum harum consequatur voluptate quo aliquam possimus, nulla optio cupiditate a corrupti qui error reprehenderit recusandae sed non quidem at quam quae consectetur omnis corporis alias! Unde voluptates enim rem aut asperiores necessitatibus voluptatum minima? Nisi, temporibus nam. Ea magnam laboriosam quo! Id quo veritatis molestiae magni explicabo, impedit officia!</p>
+          </div>
+          <div class="col-sm-4">
+            <h2>col-sm-4</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti vero harum fuga error dolorum quam ipsam debitis dicta maxime eum adipisci, illo minus in esse saepe non ratione ipsum nemo magnam inventore nihil. Velit deleniti natus maiores blanditiis. Fugiat placeat minus, possimus beatae impedit in quos tempore aspernatur omnis obcaecati cum iusto error, eius sit, enim quam dolorum fuga? Facilis, quod. Voluptatum, tenetur, veritatis, sint obcaecati quisquam ullam fuga odio aspernatur amet reiciendis dicta nemo pariatur. Mollitia, accusamus nulla laudantium necessitatibus, quibusdam ducimus est eaque qui omnis, quae odit eveniet quos vel fugiat id architecto maxime ea at alias sint voluptatibus saepe delectus? Soluta consectetur praesentium, corporis adipisci fugit unde laudantium culpa omnis! Fugit, maxime nam unde voluptate eaque tenetur delectus excepturi esse voluptatem totam magni quas nobis ut ea sed veritatis possimus dolores, earum neque vitae iusto? Provident repellendus iure eius aut! Ducimus nesciunt, temporibus assumenda voluptate, fugiat est alias, laborum numquam quaerat ratione reiciendis laudantium? Expedita facilis vero sequi nihil sit nostrum fugiat amet eos, laborum minima non maxime, veritatis alias necessitatibus cumque recusandae libero saepe in. Dignissimos provident veniam harum quae esse distinctio nesciunt et aliquam eveniet ullam officiis eaque voluptas laboriosam, commodi a rerum ea saepe! Laborum harum consequatur voluptate quo aliquam possimus, nulla optio cupiditate a corrupti qui error reprehenderit recusandae sed non quidem at quam quae consectetur omnis corporis alias! Unde voluptates enim rem aut asperiores necessitatibus voluptatum minima? Nisi, temporibus nam. Ea magnam laboriosam quo! Id quo veritatis molestiae magni explicabo, impedit officia!</p>
           </div>
         </div>
   </div>
-
+<!-- JavaScript de Bootstrap -->
+<script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script>
 </body>
 </html>
 
