--- a/src/app/templates/admin/delete.html
+++ b/src/app/templates/admin/delete.html
@@ -2,14 +2,12 @@
 
 {%block content%}
 
-<div class="row">
+{% include "utils/search_panel.html" %}
 
-{% include "search_panel.html" %}
-
-    <div class="col-md-8 bg-dark py-4 px-4 text-bg-dark rounded-2 opacity-75">
-        <h1 class="display-6 text-light">Seleccione el/los articulos que quiera borrar...</h1>
+    <div class="col-md-8 mx-auto mt-3 mt-md-0 bg-dark py-4 px-4 text-bg-dark rounded-2 opacity-75">
+        <h1 class="display-6 text-center">Seleccione el/los articulos a borrar...</h1>
         <!-- tabla para mostrar los contactos -->
-          <div class="scrollable-table">
+          <div class="scrollable-table table-responsive">
             <form method="POST" action="{{ url_for('admin.delete') }}"> <!-- Formulario para enviar los datos -->
                 <input type="hidden" name="csrf_token" value="{{csrf_token() }}">
               <table border="1" class="table table-striped table-dark table-hover">
@@ -26,9 +24,9 @@
                       {% for row in frontquery %}
                           <tr>
                             <td><input class="form-check-input" type="checkbox" name="ext" value="{{ row[0] }}"></td> <!-- Checkbox -->
-                              <td scope="row">{{ row[1] }}</td>
-                              <td scope="row">{{ row[2] }}</td>
-                              <td scope="row">{{ row[3] }}</td>
+                              <td>{{ row[1] }}</td>
+                              <td>{{ row[2] }}</td>
+                              <td>{{ row[3] }}</td>
                               <!-- Añade más columnas según tu tabla -->
                           </tr>
                       {% endfor %}
@@ -36,9 +34,7 @@
               </table>
         </div>
         <br>
-        <button type="submit" class="btn btn-danger col-md-4 justify-content-left">Eliminar Articulos Seleccionados</button> <!-- Botón de envío -->
+        <button type="submit" class="btn btn-danger col-md-5 text-center">Eliminar Articulos Seleccionados</button> <!-- Botón de envío -->
     </form>
     </div>
-</div>
-<br>
 {% endblock %}
