--- a/src/app/templates/admin/home.html
+++ b/src/app/templates/admin/home.html
@@ -2,39 +2,34 @@
 
 {%block content%}
 
-<div class="row">
-
 <!-- Incluye el panel hecho en search panel -->
-{% include "search_panel.html" %}
+{% include "utils/search_panel.html" %}
 
     <!-- Tabla -->
-    <div class="col-md-9">
-        <div class="bg-dark py-4 px-4 text-bg-dark rounded-2 opacity-75">
-            <h1 class="display-6 text-center">Articulos Existentes</h1>
-            <div class="scrollable-table table-responsive">
-                <table border="1" class="table table-striped table-dark table-hover">
-                    <thead>
+    <div class="col-md-8 mx-auto mt-3 mt-md-0 bg-dark py-4 px-4 text-bg-dark rounded-2 opacity-75">
+        <h1 class="display-6 text-center">Articulos Existentes</h1>
+        <div class="scrollable-table table-responsive px-2 px-md-0">
+            <table border="1" class="table table-striped table-dark table-hover">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Titulo</th>
+                        <th>Categoria</th>
+                        <th>Autor</th>
+                    </tr>
+                </thead>
+                <tbody class="text-left">
+                    {% for row in frontblog %}
                         <tr>
-                            <th>ID</th>
-                            <th>Titulo</th>
-                            <th>Categoria</th>
-                            <th>Autor</th>
+                            <td>{{ row[0] }}</td>
+                            <td><a class="text-light" href="{{ url_for('admin.view_story', article_id=row[0]) }}">{{ row[1] }}</a></td>
+                            <td>{{ row[2] }}</td>
+                            <td>{{ row[3] }}</td>
                         </tr>
-                    </thead>
-                    <tbody class="text-left">
-                        {% for row in frontblog %}
-                            <tr>
-                                <td scope="row">{{ row[0] }}</td>
-                                <td scope="row"><a class="text-light" href="{{ url_for('admin.view_story', article_id=row[0]) }}">{{ row[1] }}</a></td>
-                                <td scope="row">{{ row[2] }}</td>
-                                <td scope="row">{{ row[3] }}</td>
-                            </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-            </div>
+                    {% endfor %}
+                </tbody>
+            </table>
         </div>
-    </div>    
-</div>
+    </div>
 <br>
 {% endblock %}
