--- a/src/app/templates/admin/insert.html
+++ b/src/app/templates/admin/insert.html
@@ -2,23 +2,11 @@
 
 {%block content%}
 
-<div class="row">
-    <div class="col-md-3">
-        <div class="bg-dark text-light py-3 px-3 box rounded-2 opacity-75" data-bs-theme="dark">
-            <h1 class="display-6 text-success">Agregar un Articulo</h1>
-            <hr>
-            <div class="col-md-12">
-                <h4 class="display-8 text-center">Administracion de Articulos</h4>
-                <div class="bg-dark py-2 px-2 mt-1 box rounded-2 opacity-75" data-bs-theme="dark">
-                    <a type="button" class="btn btn-outline-success py-2 px-2 col-12 mb-3" href="{{url_for('admin.insert')}}">Crear Articulo</a>
-                    <a type="button" class="btn btn-outline-warning py-2 px-2 col-12 mb-3" href="{{url_for('admin.edit')}}">Editar Articulo</a>
-                    <a type="button" class="btn btn-outline-danger py-2 px-2 col-12 mb-3" href="{{url_for('admin.delete')}}">Borrar Articulo</a>
-                </div>
-            </div>
-        </div>
-    </div>
+<br>
 
-<div class="col-md-8 bg-dark text-light py-2 px-2 box rounded-2 opacity-75" data-bs-theme="dark">
+{% include "utils/opc_panel.html" %}
+
+<div class="col-md-8 mx-auto mt-3 mt-md-0 bg-dark text-light py-2 px-2 box rounded-2 opacity-75" data-bs-theme="dark">
     <div class="card shadow p-2">
         <h2 class="mb-2 text-success">Agregar un articulo...</h2>
         <form action="{{ url_for('admin.insert') }}" method="POST">
