--- a/src/app/templates/blog/comment.html
+++ b/src/app/templates/blog/comment.html
@@ -1,9 +1,9 @@
 <h2 class="display-6 text-light m-5">Comentarios</h2>
 
-<div class="bg-dark text-light p-5 m-5 opacity-50" data-bs-theme="dark">
+<div class="bg-dark text-light p-5 m-5 opacity-50 col-md-10 mx-auto">
     <label for="exampleFormControlInput1" class="form-label">Correo</label>
     <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
     <br>
     <label for="exampleFormControlTextarea1" class="form-label">Comentario</label>
-    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Deja aqui tu comentario"></textarea>
+    <textarea class="form-control" id="exampleFormControlTextarea1" rows="5" placeholder="Deja aqui tu comentario"></textarea>
   </div>
