--- a/src/app/templates/utils/pawg.html
+++ b/src/app/templates/utils/pawg.html
@@ -1,5 +1,5 @@
 <nav aria-label="Page navigation">
-  <ul class="pagination justify-content-center opacity-50" data-bs-theme="dark">
+  <ul class="pagination justify-content-center opacity-50">
       <!-- Botón Anterior -->
       <li class="page-item {% if pagina_actual == 1 %}disabled{% endif %}">
           <a class="page-link" href="?page={{ pagina_actual - 1 }}">Anterior</a>
