--- a/src/app/templates/utils/search_panel.html
+++ b/src/app/templates/utils/search_panel.html
@@ -1,21 +1,19 @@
-<div class="col-md-3">
-    <div class="bg-dark text-light py-3 px-3 box rounded-2 opacity-75" data-bs-theme="dark">
+<div class="col-md-4 mx-auto">
+    <div class="bg-dark py-2 px-2 mt-1 box rounded-2 opacity-75">
         <h1 class="display-6">Articulos del Blog</h1>
         <hr>
-        <form class="d-flex" role="search" method="GET" action="{{url_for('admin.home')}}">
+        <form role="search" method="GET" action="{{url_for('admin.home')}}">
             <fieldset>
                 <legend>Busqueda!</legend>
-                <div class="mb-3">
-                    <label for="TextInput" class="form-label">Escriba un titulo para empezar a buscar:</label>
-                    <input type="search" name="query" id="TextInput" class="form-control me-2" placeholder="Titulo del Articulo">
-                </div>
+                    <label for="TextInput" class="form-label">Escriba el titulo a buscar:</label>
+                    <input type="search" name="query" id="TextInput" class="form-control py-1 px-2 col-12 mb-2 text-center" placeholder="Titulo del Articulo">
                 <button type="submit" class="btn btn-outline-primary py-1 px-2 col-12 mb2">Buscar...</button>
             </fieldset>
         </form>
         <hr>
         <div>
-            <h4 class="display-8 text-center">Administracion de Articulos</h4>
-            <div class="bg-dark py-2 px-2 mt-1 box rounded-2 opacity-75" data-bs-theme="dark">
+            <h4 class="display-8 text-center">Panel de Administracion</h4>
+            <div class="py-2 px-2 mt-1 box rounded-2 opacity-75">
                 <a type="button" class="btn btn-outline-success py-1 px-2 col-12 mb-2" href="{{url_for('admin.insert')}}">Crear Articulo</a>
                 <a type="button" class="btn btn-outline-warning py-1 px-2 col-12 mb-2" href="{{url_for('admin.edit')}}">Actualizar Articulo</a>
                 <a type="button" class="btn btn-outline-danger py-1 px-2 col-12 mb-2" href="{{url_for('admin.delete')}}">Borrar Articulo</a>
@@ -24,3 +22,4 @@
         </div>
     </div>
 </div>
+
