--- a/src/app/templates/layout.html
+++ b/src/app/templates/layout.html
@@ -35,7 +35,7 @@
     </div>
   </nav>
   <br>
-    <div class="container-fluid text-light" data-bs-theme="dark">
+    <div class="container text-light" data-bs-theme="dark">
       <div class="row gx-5">
         {%block content%}
         {%endblock%}
