--- a/src/app/templates/utils/404.html
+++ b/src/app/templates/utils/404.html
@@ -2,10 +2,11 @@
 
 {% block content %}
 
-<div class="col">
-  <div class="bg-dark text-light p-5 box rounded-2 m-3 opacity-50">
+<div class="col-md-8 mx-auto">
+  <div class="bg-dark text-center p-5 box rounded-2 m-3 opacity-50">
     <h1 class="display-4 text-danger">Error 404!!!</h1>
     <h1 class="display-4 text-danger">El articulo no existe</h1>
+    <br>
     <a class="btn btn-outline-primary btn-lg" 
     href="{{url_for('home.index')}}" role="button">Regresar</a>
   </div>
