--- a/src/app/templates/admin/edit.html
+++ b/src/app/templates/admin/edit.html
@@ -2,33 +2,37 @@
 
 {%block content%}
 
-    {% include "utils/search_panel.html" %}
+<div class="text-warning-emphasis text-center">
+    <h1>Editar una Publicación</h1>
+    <br>
+</div>
 
-    <!-- Tabla -->
-    <div class="col-md-8 mx-auto mt-3 mt-md-0 bg-dark py-4 px-4 text-bg-dark rounded-2 opacity-75">
-            <h1 class="display-6 text-center">Seleccione articulo a editar...</h1>
-            <div class="scrollable-table table-responsive px-2 px-md-0">
-                <table border="1" class="table table-striped table-dark table-hover">
-                    <thead>
+{% include "utils/search_panel.html" %}
+
+<!-- Tabla -->
+<div class="col-md-8 mx-auto mt-3 mt-md-0 bg-dark py-4 px-4 text-bg-dark rounded-2 opacity-75">
+        <div class="scrollable-table table-responsive px-2 px-md-0">
+            <table border="1" class="table table-striped table-dark table-hover">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Titulo</th>
+                        <th>Categoria</th>
+                        <th>Autor</th>
+                    </tr>
+                </thead>
+                <tbody class="text-left">
+                    {% for row in frontblog %}
                         <tr>
-                            <th>ID</th>
-                            <th>Titulo</th>
-                            <th>Categoria</th>
-                            <th>Autor</th>
+                            <td>{{ row[0] }}</td>
+                            <td><a class="text-warning" href="{{ url_for('admin.edit_story', article_id=row[0]) }}">{{ row[1] }}</a></td>
+                            <td>{{ row[2] }}</td>
+                            <td>{{ row[3] }}</td>
                         </tr>
-                    </thead>
-                    <tbody class="text-left">
-                        {% for row in frontblog %}
-                            <tr>
-                                <td>{{ row[0] }}</td>
-                                <td><a class="text-warning" href="{{ url_for('admin.edit_story', article_id=row[0]) }}">{{ row[1] }}</a></td>
-                                <td>{{ row[2] }}</td>
-                                <td>{{ row[3] }}</td>
-                            </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-            </div>
+                    {% endfor %}
+                </tbody>
+            </table>
         </div>
     </div>
+</div>
 {% endblock %}
