--- a/src/app/templates/admin/edit_full.html
+++ b/src/app/templates/admin/edit_full.html
@@ -2,25 +2,29 @@
 
 {%block content%}
 
+<div class="text-warning-emphasis text-center">
+    <h1>Editar esta Publicación</h1>
+    <br>
+</div>
+
 {% include "utils/opc_panel.html" %}
 
-<div class="col-md-8 mx-auto mt-3 mt-md-0 bg-dark text-light py-2 px-2 box rounded-2 opacity-75" data-bs-theme="dark">
-    <div class="card shadow p-2">
-        <h2 class="mb-2 text-Warning">Editar esta Publicación</h2>
+<div class="col-md-8 mx-auto mt-3 mt-md-0 bg-dark py-2 px-2 box rounded-2 opacity-75" data-bs-theme="dark">
+    <div class="card shadow p-2 text-warning">
         <form action="{{ url_for('admin.edit_story', article_id=article[0]) }}" method="POST">
             <input type="hidden" name="csrf_token" value="{{csrf_token() }}">
             <div class="mb-2">
-              <label for="titulo" class="form-label text-Warning">ID</label>
+              <label for="titulo" class="form-label">ID</label>
               <input type="text" class="form-control" name="ids" value="{{ article[0] }}" readonly>
             </div>
             <div class="mb-2">
-                <label for="titulo" class="form-label text-Warning">Título</label>
+                <label for="titulo" class="form-label">Título</label>
                 <input type="text" class="form-control" name="titulo" value="{{ article[1] }}">
             </div>
             <div class="mb-2">
-                <label for="categoria" class="form-label text-Warning">Categoría</label>
-                <select class="form-select" name="categoria" value="{{ article[2] }}">
-                    <option selected disabled class="text-Warning">Selecciona una categoría</option>
+                <label for="categoria" class="form-label">Categoría</label>
+                <select class="form-select text-warning" name="categoria" value="{{ article[2] }}">
+                    <option selected disabled>Selecciona una categoría</option>
                     <option value="Tecnología">Tecnología</option>
                     <option value="Ciencia">Ciencia</option>
                     <option value="Literatura">Literatura</option>
@@ -28,13 +32,14 @@
                 </select>
             </div>
             <div class="mb-2">
-                <label for="autor" class="form-label text-Warning">Autor</label>
+                <label for="autor" class="form-label">Autor</label>
                 <input type="text" class="form-control" name="autor" value="{{ article[3] }}">
             </div>
-            <div class="mb-2 text-Warning">
-                <label for="contenido" class="form-label text-Warning">Articulo</label>
+            <div class="mb-2g">
+                <label for="contenido" class="form-label">Articulo</label>
                 <textarea class="form-control" name="contenido" rows="5">{{ article[4] }}</textarea>
             </div>
+            <br>
             <button type="submit" class="btn btn-warning">Enviar</button>
         </form>
     </div>
