--- a/src/app/templates/admin/home.html
+++ b/src/app/templates/admin/home.html
@@ -2,12 +2,16 @@
 
 {%block content%}
 
+<div class="text-primary-emphasis text-center">
+    <h1>Articulos Existentes</h1>
+    <br>
+</div>
+
 <!-- Incluye el panel hecho en search panel -->
 {% include "utils/search_panel.html" %}
 
     <!-- Tabla -->
     <div class="col-md-8 mx-auto mt-3 mt-md-0 bg-dark py-4 px-4 text-bg-dark rounded-2 opacity-75">
-        <h1 class="display-6 text-center">Articulos Existentes</h1>
         <div class="scrollable-table table-responsive px-2 px-md-0">
             <table border="1" class="table table-striped table-dark table-hover">
                 <thead>
