--- a/src/app/templates/blog/article.html
+++ b/src/app/templates/blog/article.html
@@ -3,7 +3,7 @@
 {% block content %}
 
   <div class="col-md-10 mx-auto">
-    <h1 class="display-4 m-5">{{ article[1]}}</h1>
+    <h1 class="display-4 m-5 text-center">{{ article[1]}}</h1>
     <p class="lead">{{ article[2] }}, {{ article[3] }}</p>
     <hr class="my-4">
     {{ md | safe }}
