--- a/src/app/templates/utils/opc_panel.html
+++ b/src/app/templates/utils/opc_panel.html
@@ -1,9 +1,11 @@
 <div class="col-md-3 mx-auto">
     <div class="bg-dark text-light py-3 px-3 box rounded-2 opacity-75" data-bs-theme="dark">
         <h4 class="display-8 text-center">Panel de Administracion</h4>
+        <hr>
+        <a type="button" class="btn btn-outline-info py-2 px-2 col-12 mb-3" href="{{url_for('admin.home')}}">Inicio</a>
         <a type="button" class="btn btn-outline-success py-2 px-2 col-12 mb-3" href="{{url_for('admin.insert')}}">Crear Articulo</a>
         <a type="button" class="btn btn-outline-warning py-2 px-2 col-12 mb-3" href="{{url_for('admin.edit')}}">Editar Articulo</a>
         <a type="button" class="btn btn-outline-danger py-2 px-2 col-12 mb-3" href="{{url_for('admin.delete')}}">Borrar Articulo</a>
-        <a type="button" class="btn btn-outline-secondary py-1 px-2 col-12 mb-2" href="{{url_for('admin.logout')}}">Cerrar Sesion</a>
+        <a type="button" class="btn btn-outline-light py-2 px-2 col-12 mb-2" href="{{url_for('admin.logout')}}">Cerrar Sesion</a>
     </div>
 </div>
