--- a/src/app/templates/utils/search_panel.html
+++ b/src/app/templates/utils/search_panel.html
@@ -14,10 +14,11 @@
         <div>
             <h4 class="display-8 text-center">Panel de Administracion</h4>
             <div class="py-2 px-2 mt-1 box rounded-2 opacity-75">
+                <a type="button" class="btn btn-outline-info py-1 px-2 col-12 mb-2" href="{{url_for('admin.home')}}">Inicio</a>
                 <a type="button" class="btn btn-outline-success py-1 px-2 col-12 mb-2" href="{{url_for('admin.insert')}}">Crear Articulo</a>
                 <a type="button" class="btn btn-outline-warning py-1 px-2 col-12 mb-2" href="{{url_for('admin.edit')}}">Actualizar Articulo</a>
                 <a type="button" class="btn btn-outline-danger py-1 px-2 col-12 mb-2" href="{{url_for('admin.delete')}}">Borrar Articulo</a>
-                <a type="button" class="btn btn-outline-secondary py-1 px-2 col-12 mb-2" href="{{url_for('admin.logout')}}">Cerrar Sesion</a>
+                <a type="button" class="btn btn-outline-light py-1 px-2 col-12 mb-2" href="{{url_for('admin.logout')}}">Cerrar Sesion</a>
             </div>
         </div>
     </div>
