--- a/src/app/templates/layout.html
+++ b/src/app/templates/layout.html
@@ -21,15 +21,18 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{{ url_for('admin.login')}}">Acceso</a>
+          <li class="nav-item"><a class="nav-link active" aria-current="page" href="{{ url_for('admin.login')}}">Acceso</a></li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Operaciones</a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="{{ url_for('admin.home')}}">Articulos</a></li>
+              <li><a class="dropdown-item" href="#">Usuarios</a></li>
+              <li><a class="dropdown-item" href="#">Comentarios</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="{{url_for('admin.logout')}}">Cerrar Sesion</a></li>
+            </ul>
           </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{{ url_for('admin.home')}}">Operaciones</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{{ url_for('pruebas.test')}}">Pruebas</a>
-          </li>
+          <li class="nav-item"><a class="nav-link active" aria-current="page" href="{{ url_for('pruebas.test')}}">Pruebas</a></li>
         </ul>
       </div>
     </div>
