Agregando menu de busqueda cambiando enfoque del panel de la izquierda - para que sirva para mostrar todas las categorias

--- a/src/app/templates/layout.html
+++ b/src/app/templates/layout.html
@@ -20,6 +20,10 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <form class="d-flex" role="search">
+          <input class="form-control me-2" type="search" placeholder="Titulo de Articulo..." aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Buscar</button>
+        </form>
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item"><a class="nav-link active" aria-current="page" href="{{ url_for('admin.login')}}">Acceso</a></li>
           <li class="nav-item dropdown">
