--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -8,6 +8,7 @@
   <br>
   <h1 class="display-6 text-center text-light">Ultimos articulos redactados en el blog</h1>
   <br>
+  <div class="overflow-auto rounded-3" style="max-height: 70vh;">
   {% for row in cons %}
   <div class="col-md-12 justify-content-center mx-auto">
     <div class="h-100 p-5 bg-body-tertiary border-light rounded-3 opacity-50">
@@ -18,6 +19,8 @@
   </div>
   <br>
   {% endfor %}
+</div>
+<br>
 </div>
 
 {% include "utils/pawg.html" %}
