cambios en el layout para evitar que se mueva

--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -2,8 +2,6 @@
 
 {% block content %}
 
-{% include "utils/search_article.html" %}
-
 <div class="col">
   <br>
   <h1 class="display-6 text-center text-light">Ultimos articulos redactados en el blog</h1>
@@ -23,6 +21,6 @@
 <br>
 </div>
 
-{% include "utils/pawg.html" %}
+{% include "utils/categories.html" %}
 
 {% endblock %}
