--- a/src/app/templates/utils/categories.html
+++ b/src/app/templates/utils/categories.html
@@ -1,16 +1,13 @@
 <div class="col-md-4 mx-auto">
     <br><br><br><br>
     <div class="py-4 px-4 mt-1 bg-dark box rounded-4 opacity-50">
-        <h1 class="display-6">Categorias!</h1>
+        <h1 class="display-6 tenter">Categorias!</h1>
         <hr>
-        <form role="search" method="GET" action="{{url_for('admin.home')}}">
-            <fieldset>
-                <legend>Seleccione</legend>
-                    <label for="TextInput" class="form-label">Una Categoria:</label>
-                    <input type="search" name="query" id="TextInput" class="form-control py-1 px-2 col-12 mb-2 text-center" placeholder="Titulo del Articulo">
-                <button type="submit" class="btn btn-outline-primary py-1 px-2 col-12 mb2">Buscar...</button>
-            </fieldset>
-        </form>
+        <a type="button" class="btn btn-outline-info py-2 px-2 col-12 mb-3" href="#"><b>Tecnologia</b></a>
+        <a type="button" class="btn btn-outline-success py-2 px-2 col-12 mb-3" href="#"><b>Ciencia</b></a>
+        <a type="button" class="btn btn-outline-warning py-2 px-2 col-12 mb-3" href="#"><b>Biologia</b></a>
+        <a type="button" class="btn btn-outline-danger py-2 px-2 col-12 mb-3" href="#"><b>Astrologia</b></a>
+        <a type="button" class="btn btn-outline-light py-2 px-2 col-12 mb-2" href="#"><b>Fisica</b></a>
         <br>
         <br>
     </div>
