--- a/src/app/templates/users/index.html
+++ b/src/app/templates/users/index.html
@@ -10,19 +10,19 @@
     <!-- Tabla -->
     <div class="col-md-8 mx-auto mt-3 mt-md-0 bg-dark py-4 px-4 text-bg-dark rounded-2 opacity-75">
         <div class="scrollable-table table-responsive px-2 px-md-0">
-            <table border="1" class="table table-striped table-dark table-hover">
+            <table border="1" class="table table-striped table-dark table-hover text-center">
                 <thead>
                     <tr>
-                        <th>ID</th>
                         <th>Nombre Usuario</th>
                         <th>Nombre Completo</th>
                         <th>Correo</th>
                         <th>Institucion</th>
                         <th>Cargo</th>
+                        <th>Fecha de Creacion</th>
                     </tr>
                 </thead>
                 <tbody class="text-left">
-                    {% for row in frontblog %}
+                    {% for row in users %}
                         <tr>
                             <td>{{ row[0] }}</td>
                             <td>{{ row[1] }}</td>
