--- a/src/app/templates/utils/search_panel.html
+++ b/src/app/templates/utils/search_panel.html
@@ -18,7 +18,7 @@
                 <a type="button" class="btn btn-outline-success py-1 px-2 col-12 mb-2" href="{{url_for('admin.insert')}}">Crear Articulo</a>
                 <a type="button" class="btn btn-outline-warning py-1 px-2 col-12 mb-2" href="{{url_for('admin.edit')}}">Actualizar Articulo</a>
                 <a type="button" class="btn btn-outline-danger py-1 px-2 col-12 mb-2" href="{{url_for('admin.delete')}}">Borrar Articulo</a>
-                <a type="button" class="btn btn-outline-light py-1 px-2 col-12 mb-2" href="{{url_for('admin.logout')}}">Cerrar Sesion</a>
+                <a type="button" class="btn btn-outline-light py-1 px-2 col-12 mb-2" href="{{url_for('auth.logout')}}">Cerrar Sesion</a>
             </div>
         </div>
     </div>
