--- a/src/app/templates/layout.html
+++ b/src/app/templates/layout.html
@@ -37,7 +37,7 @@
           {% endif %}
           <form class="d-flex" role="search" method="GET" action="{{ url_for('home.index') }}">
             <input class="form-control me-2" name="q" type="search" value="{{ search_term or '' }}" placeholder="Titulo de Articulo..." aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Buscar</button>
+            <button class="btn btn-outline-primary" type="submit">Buscar</button>
           </form>
         </ul>
       </div>
