--- a/src/app/templates/utils/401.html
+++ b/src/app/templates/utils/401.html
@@ -5,7 +5,7 @@
 <div class="col-md-8 mx-auto">
   <div class="bg-dark text-center p-5 box rounded-2 m-3 opacity-50">
     <h1 class="display-4 text-danger">Error 401!!!</h1>
-    <h1 class="display-4 text-danger">No estas autorizado</h1>
+    <h1 class="display-4 text-danger">No estas autorizado, vete de aqui!</h1>
     <br>
     <a class="btn btn-outline-primary btn-lg" 
     href="{{url_for('home.index')}}" role="button">Regresar</a>
