--- a/src/app/templates/utils/opc_panel.html
+++ b/src/app/templates/utils/opc_panel.html
@@ -6,6 +6,6 @@
         <a type="button" class="btn btn-outline-success py-2 px-2 col-12 mb-3" href="{{url_for('admin.insert')}}">Crear Articulo</a>
         <a type="button" class="btn btn-outline-warning py-2 px-2 col-12 mb-3" href="{{url_for('admin.edit')}}">Editar Articulo</a>
         <a type="button" class="btn btn-outline-danger py-2 px-2 col-12 mb-3" href="{{url_for('admin.delete')}}">Borrar Articulo</a>
-        <a type="button" class="btn btn-outline-light py-2 px-2 col-12 mb-2" href="{{url_for('admin.logout')}}">Cerrar Sesion</a>
+        <a type="button" class="btn btn-outline-light py-2 px-2 col-12 mb-2" href="{{url_for('auth.logout')}}">Cerrar Sesion</a>
     </div>
 </div>
