se agrega: - funciones de validacion en models users.py para creacion de usuario - se agrega ruta de registro de usuarios (en auth debido a que users esta restringido) - en el login se agrega boton para registro - en el layout se agrega condicional que solo muestra busqueda si el endpoint es home.index - en el index se agregan campos para mejor visibilidad de la BD - se agrega formulario de registro de usuarios
falta!
- personalizar permisos (que no tenga acceso total a la BD)
- un campo en usuarios para activar o desactivar usuarios

--- a/src/app/templates/auth/login.html
+++ b/src/app/templates/auth/login.html
@@ -41,6 +41,8 @@
         </form>
         <br>
         <button class="btn btn-outline-light w-100 py-2"><a href="/">regresar</a></button>
+        <p class="mt-5 mb-3 text-body-secondary text-center">No tienes usuario? Registrate Aqui abajo:</p>
+        <button class="btn btn-outline-light w-100 py-2"><a href="{{ url_for('auth.register')}}">Registro</a></button>
         <p class="mt-5 mb-3 text-body-secondary text-center">Playgrounds 2025</p>
     </main>
   </div>
