--- a/src/app/templates/users/index.html
+++ b/src/app/templates/users/index.html
@@ -13,6 +13,7 @@
             <table border="1" class="table table-striped table-dark table-hover text-center">
                 <thead>
                     <tr>
+                        <th>ID</th>
                         <th>Nombre Usuario</th>
                         <th>Nombre Completo</th>
                         <th>Correo</th>
@@ -30,6 +31,7 @@
                             <td>{{ row[3] }}</td>
                             <td>{{ row[4] }}</td>
                             <td>{{ row[5] }}</td>
+                            <td>{{ row[6] }}</td>
                         </tr>
                     {% endfor %}
                 </tbody>
