--- a/src/app/templates/users/index.html
+++ b/src/app/templates/users/index.html
@@ -26,7 +26,7 @@
                     {% for row in users %}
                         <tr>
                             <td>{{ row[0] }}</td>
-                            <td>{{ row[1] }}</td>
+                            <td> <a href="{{ url_for('users.edit', user_id=row[0]) }}">{{ row[1] }}</a></td>
                             <td>{{ row[2] }}</td>
                             <td>{{ row[3] }}</td>
                             <td>{{ row[4] }}</td>
