se modifica: - search_panel para que tenga todas las opciones segun el endpoint   - muestre la busqueda siempre que se muestre una tabla falta: - que en cada endpoint con una tabla haga una busqueda especifica

--- a/src/app/templates/admin/edit_full.html
+++ b/src/app/templates/admin/edit_full.html
@@ -7,7 +7,8 @@
     <br>
 </div>
 
-{% include "utils/opc_panel.html" %}
+<!-- Incluye el panel hecho en search panel -->
+{% include "utils/search_panel.html" %}
 
 <div class="col-md-8 mx-auto mt-3 mt-md-0 bg-dark py-2 px-2 box rounded-2 opacity-75" data-bs-theme="dark">
     <div class="card shadow p-2 text-warning">
