--- a/src/app/templates/users/delete.html
+++ b/src/app/templates/users/delete.html
@@ -7,6 +7,9 @@
     <br>
 </div>
 
+<!-- Incluye el panel hecho en search panel -->
+{% include "utils/search_panel.html" %}
+
     <div class="col-md-8 mx-auto mt-3 mt-md-0 bg-dark py-2 px-4 text-bg-dark rounded-2 opacity-75">
         <!-- tabla para mostrar los contactos -->
           <div class="scrollable-table table-responsive px-2 px-md-0">
