--- a/src/app/templates/users/index.html
+++ b/src/app/templates/users/index.html
@@ -7,6 +7,9 @@
     <br>
 </div>
 
+<!-- Incluye el panel hecho en search panel -->
+{% include "utils/search_panel.html" %}
+
     <!-- Tabla -->
     <div class="col-md-8 mx-auto mt-3 mt-md-0 bg-dark py-4 px-4 text-bg-dark rounded-2 opacity-75">
         <div class="scrollable-table table-responsive px-2 px-md-0">
@@ -26,7 +29,7 @@
                     {% for row in users %}
                         <tr>
                             <td>{{ row[0] }}</td>
-                            <td> <a href="{{ url_for('users.edit', user_id=row[0]) }}">{{ row[1] }}</a></td>
+                            <td><a class="text-warning" href="{{ url_for('users.edit', user_id=row[0]) }}">{{ row[1] }}</a></td>
                             <td>{{ row[2] }}</td>
                             <td>{{ row[3] }}</td>
                             <td>{{ row[4] }}</td>
