se cambia: - fondo a grisaceo - admin delete, se arregla busqueda - el search panel apunta al url que este solicitando la busqueda   (siempre que la ruta admita la misma busqueda)

--- a/src/app/static/css/main.css
+++ b/src/app/static/css/main.css
@@ -1,9 +1,9 @@
 body
 {
-    background: #403A3E;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #BE5869, #403A3E);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #BE5869, #403A3E); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+    background: #bdc3c7;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #2c3e50, #bdc3c7);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #2c3e50, #bdc3c7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+       
 }
 
 .scrollable-table {
