se agrega: - mas opacidad (al 75%) en varios textos. - cambios de color de fondo (algo mas neutro). - cambios en el login para mejorar legibilidad. - cambios en el layout y para mejorar diseño responsive

--- a/src/app/templates/auth/login.html
+++ b/src/app/templates/auth/login.html
@@ -36,13 +36,13 @@
             <input class="form-check-input" type="checkbox" value="remember-me" id="checkDefault">
             <label class="form-check-label" for="checkDefault">Recuerdame</label>
           </div>
-          <button class="btn btn-outline-light w-100 py-2" type="submit">Iniciar Sesion</button>
+          <button class="btn btn-outline-light w-100 py-2" type="submit"><b>Iniciar Sesion</b></button>
           
         </form>
         <br>
-        <button class="btn btn-outline-light w-100 py-2"><a href="/">regresar</a></button>
+        <button class="btn btn-outline-light w-100 py-2"><a class="text-light" href="/">regresar</a></button>
         <p class="mt-5 mb-3 text-body-secondary text-center">No tienes usuario? Registrate Aqui abajo:</p>
-        <button class="btn btn-outline-light w-100 py-2"><a href="{{ url_for('auth.register')}}">Registro</a></button>
+        <button class="btn btn-outline-light w-100 py-2"><a class="text-light" href="{{ url_for('auth.register')}}">Registro</a></button>
         <p class="mt-5 mb-3 text-body-secondary text-center">Playgrounds 2025</p>
     </main>
   </div>
