--- a/src/app/templates/admin/home.html
+++ b/src/app/templates/admin/home.html
@@ -2,7 +2,7 @@
 
 {%block content%}
 
-<div class="text-primary-emphasis text-center">
+<div class="text-primary text-center">
     <h1>Articulos Existentes</h1>
     <br>
 </div>
