--- a/src/app/templates/blog/article.html
+++ b/src/app/templates/blog/article.html
@@ -1,19 +1,17 @@
 {% extends "layout.html" %}
 
 {% block content %}
-
-  <div class="col-md-10 mx-auto">
-    <h1 class="display-4 m-5 text-center">{{ article[1]}}</h1>
-    <p class="lead">{{ article[2] }}, {{ article[3] }}</p>
-    <hr class="my-4">
-    {{ md | safe }}
-    <br>
-    <br>
-    <a class="btn btn-outline-primary btn-lg text-center" 
-    href="{{url_for('home.index')}}" role="button">Regresar</a>
+  <div class="row justify-content-center">
+    <div class="col-md-10">
+      <h1 class="display-4 my-4 text-center">{{ article[1]}}</h1>
+      <p class="lead text-muted text-center">{{ article[2] }}, {{ article[3] }}</p>
+      <hr class="my-4">
+      <div class="markdown-content">{{ md | safe }}</div>
+      <div class="d-grid gap-2 d-md-flex justify-content-md-center my-5">
+        <a class="btn btn-outline-primary btn-lg" 
+           href="{{url_for('home.index')}}" role="button">Regresar</a>
+      </div>
+      {% include "blog/comment.html" %}
+    </div>
   </div>
-  <br>
-  {% include "blog/comment.html" %}
-
-
 {% endblock %}
