--- a/src/app/templates/layout.html
+++ b/src/app/templates/layout.html
@@ -47,7 +47,7 @@
   </nav>
   <br>
     <div class="container text-light" data-bs-theme="dark">
-      <div class="row gx-5">
+      <div class="row justify-content-center  ">
         {%block content%}
         {%endblock%}
       </div>
