--- a/src/app/templates/utils/categories.html
+++ b/src/app/templates/utils/categories.html
@@ -1,13 +1,13 @@
 <div class="col-md-4 mx-auto">
     <br><br><br><br>
     <div class="py-4 px-4 mt-1 bg-dark box rounded-4 opacity-75">
-        <h1 class="display-6 tenter">Top Categorias!</h1>
+        <h1 class="display-6 text-center">Top Categorias!</h1>
         <hr>
-        <a type="button" class="btn btn-outline-info py-2 px-2 col-12 mb-3" href="#"><b>Tecnologia</b></a>
-        <a type="button" class="btn btn-outline-success py-2 px-2 col-12 mb-3" href="#"><b>Ciencia</b></a>
-        <a type="button" class="btn btn-outline-warning py-2 px-2 col-12 mb-3" href="#"><b>Biologia</b></a>
-        <a type="button" class="btn btn-outline-danger py-2 px-2 col-12 mb-3" href="#"><b>Astrologia</b></a>
-        <a type="button" class="btn btn-outline-light py-2 px-2 col-12 mb-2" href="#"><b>Fisica</b></a>
+        <a type="button" class="btn btn-outline-info py-2 px-2 col-8 mx-auto d-block mb-3" href="#"><b>Tecnologia</b></a>
+        <a type="button" class="btn btn-outline-success py-2 px-2 col-8 mx-auto d-block mb-3" href="#"><b>Ciencia</b></a>
+        <a type="button" class="btn btn-outline-warning py-2 px-2 col-8 mx-auto d-block mb-3" href="#"><b>Biologia</b></a>
+        <a type="button" class="btn btn-outline-danger py-2 px-2 col-8 mx-auto d-block mb-3" href="#"><b>Astrologia</b></a>
+        <a type="button" class="btn btn-outline-light py-2 px-2 col-8 mx-auto d-block mb-2" href="#"><b>Fisica</b></a>
         <br>
         <br>
     </div>
