--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -4,7 +4,7 @@
 
 <div class="col">
   <br>
-  <h1 class="display-6 text-center text-light">Ultimos articulos redactados en el blog</h1>
+  <h1 class="display-6 text-center text-light">Ultimos articulos agregados!</h1>
   <br>
   <div class="overflow-auto rounded-4" style="max-height: 55vh;">
   {% for row in cons %}
