quitando data-bs-theme para aplicar modo oscuro mediante toggle correctamente

--- a/src/app/templates/admin/article.html
+++ b/src/app/templates/admin/article.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div class="bg-dark text-light p-5 box rounded-2 m-3 opacity-50" data-bs-theme="dark">
+<div class="bg-dark text-light p-5 box rounded-2 m-3 opacity-50">
     <h1 class="display-4">{{ article[1]}}</h1>
     <p class="lead">{{ article[2] }}, {{ article[3] }}</p>
     <hr class="my-4">
