--- a/src/app/templates/admin/edit_full.html
+++ b/src/app/templates/admin/edit_full.html
@@ -10,7 +10,7 @@
 <!-- Incluye el panel hecho en search panel -->
 {% include "utils/search_panel.html" %}
 
-<div class="col-md-8 mx-auto mt-3 mt-md-0 bg-dark py-2 px-2 box rounded-2 opacity-75" data-bs-theme="dark">
+<div class="col-md-8 mx-auto mt-3 mt-md-0 bg-dark py-2 px-2 box rounded-2 opacity-75">
     <div class="card shadow p-2 text-warning">
         <form action="{{ url_for('admin.edit_story', article_id=article[0]) }}" method="POST">
             <input type="hidden" name="csrf_token" value="{{csrf_token() }}">
