--- a/src/app/templates/users/register.html
+++ b/src/app/templates/users/register.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="col-md-6 mx-auto form-box text-center">
-  <div class="form-value" data-bs-theme="dark">
+  <div class="form-value">
     <main class="form-signin m-auto">
         <form action="{{ url_for('auth.register') }}" method="POST">
           <img class="mb-4" src="{{ url_for('static',filename='img/pinwheel.png')}}" alt="" width="76" height="72">
