quitando el text-light en pos de poder configurar un modo oscuro

--- a/src/app/templates/blog/comment.html
+++ b/src/app/templates/blog/comment.html
@@ -1,6 +1,6 @@
-<h2 class="display-6 text-light m-5">Comentarios</h2>
+<h2 class="display-6 m-5">Comentarios</h2>
 
-<div class="bg-dark text-light p-5 m-5 opacity-50 col-md-10 mx-auto">
+<div class="bg-dark p-5 m-5 opacity-50 col-md-10 mx-auto">
     <label for="exampleFormControlInput1" class="form-label">Correo</label>
     <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
     <br>
