--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -4,12 +4,12 @@
 
 <div class="col">
   <br>
-  <h1 class="display-6 text-center text-light">Ultimos articulos agregados!</h1>
+  <h1 class="display-6 text-center">Ultimos articulos agregados!</h1>
   <br>
   <div class="overflow-auto rounded-4" style="max-height: 55vh;">
   {% for row in cons %}
   <div class="col-md-12 justify-content-center mx-auto">
-    <div class="h-100 p-5 bg-body-tertiary border-light rounded-4 opacity-75">
+    <div class="h-100 p-5 bg-body-tertiary rounded-4 opacity-75">
       <h2>{{ row[1] }}</h2>
       <ph2>{{ row[2] }}</p>
       <a class="btn btn-outline-secondary" type="button" href="{{ url_for('home.read_story', article_id=row[0]) }}">Leer mas...</a>
