--- a/src/app/templates/blog/comment.html
+++ b/src/app/templates/blog/comment.html
@@ -1,8 +1,8 @@
 <h2 class="display-6 m-5">Comentarios</h2>
 
-<div class="bg-dark p-5 m-5 opacity-50 col-md-10 mx-auto">
+<div class="bg-dark p-5 m-5 opacity-50 col-md-10 mx-auto rounded-4">
     <label for="exampleFormControlInput1" class="form-label">Correo</label>
-    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="tu_direccion@de_correo.com">
     <br>
     <label for="exampleFormControlTextarea1" class="form-label">Comentario</label>
     <textarea class="form-control" id="exampleFormControlTextarea1" rows="5" placeholder="Deja aqui tu comentario"></textarea>
